<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header aligned to top -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:background="#FC9"
        android:backgroundTint="#113859"
        android:gravity="bottom|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_CoordiKids"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Scrollable Item below header and above footer -->
    <ScrollView
        android:id="@+id/scrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header"
        android:background="#fff">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">


            <TextView
                android:id="@+id/my_account_or_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:drawableRight="@drawable/ic_right_arrow"
                android:gravity="top"
                android:paddingRight="25dp"
                android:text="@string/my_account"
                android:textAppearance="@style/more_content_title"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/ic_right_arrow"
                android:gravity="top"
                android:paddingRight="25dp"
                android:text="@string/message"
                android:textAppearance="@style/more_content_title"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_account_or_login" />


            <TextView
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/ic_right_arrow"
                android:gravity="top"
                android:paddingEnd="25dp"
                android:text="@string/contact_us"
                android:textAppearance="@style/more_content_title"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message" />


            <TextView
                android:id="@+id/share_with_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/ic_link"
                android:gravity="top"
                android:paddingEnd="18dp"
                android:text="@string/share_with_friends"
                android:textAppearance="@style/more_content_title"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_us" />


            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/ic_link"
                android:gravity="top"
                android:paddingEnd="18dp"
                android:text="@string/terms_of_use"
                android:textAppearance="@style/more_content_title"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/share_with_friends" />


            <TextView
                android:id="@+id/rate_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/ic_link"
                android:gravity="top"
                android:paddingEnd="18dp"
                android:text="@string/rate_us"
                android:textAppearance="@style/more_content_title"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/terms" />

            <TextView
                android:id="@+id/blog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/ic_link"
                android:gravity="top"
                android:paddingEnd="18dp"
                android:text="@string/blog"
                android:textAppearance="@style/more_content_title"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rate_us" />


            <TextView
                android:id="@+id/faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/ic_link"
                android:gravity="top"
                android:paddingEnd="18dp"
                android:text="@string/faq"
                android:textAppearance="@style/more_content_title"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blog" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>