<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header aligned to top -->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:background="#FC9"
            android:backgroundTint="#113859"
            android:gravity="bottom|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_CoordiKids"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Scrollable Item below header and above footer -->
        <ScrollView
            android:id="@+id/scrollableContents"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/header"
            android:background="#fff">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/text_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Profile"
                    android:textColor="#113859"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/update_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:gravity="top"
                    android:paddingRight="25dp"
                    android:text="@string/update_details"
                    android:textAppearance="@style/more_content_title"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_profile" />


                <TextView
                    android:id="@+id/course_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:gravity="top"
                    android:paddingRight="25dp"
                    android:text="@string/course_progress"
                    android:textAppearance="@style/more_content_title"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/update_details" />


                <TextView
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:gravity="top"
                    android:paddingEnd="25dp"
                    android:text="@string/logout"
                    android:textAppearance="@style/more_content_title"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/course_progress" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </RelativeLayout>
</layout>